--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;1,200&family=Roboto:wght@100;300;400&display=swap');
+#root{
+  
+}
+html{
+  
+}
+body{
+  /* font-family: 'Montserrat', sans-serif; */
+font-family: 'Roboto', sans-serif;
+line-height: 1.5rem; 
+font-size: .875rem; 
+
+
+}
