--- a/src/pages/contacts/lists/CreateListItem/Use_example/Example.css
+++ b/src/pages/contacts/lists/CreateListItem/Use_example/Example.css
@@ -20,3 +20,6 @@
   border-top: 1px solid rgb(224, 228, 240);
   border-radius: 8px;
 }
+.bgr .ant-checkbox-input[disabled] + span {
+  background-color: #fafafa; /* Màu nền khi checkbox bị vô hiệu hóa */
+}
